recent regulation msg

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { //ALAA :DESKTOP-68GQKG3 * Salma :DESKTOP-BENJAMI
-    "DefaultConnection": "Data Source=DESKTOP-68GQKG3;Database=NBE11;Trusted_Connection=True;TrustServerCertificate=True;"
+  "ConnectionStrings": { //ALAA :DESKTOP-68GQKG3 * Salma :SY9-ME
+    "DefaultConnection": "Data Source=SY9-ME;Database=NBE11;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "MailSettings": {
     "Email": "pioneersexpress5@gmail.com",
